# modern-python-enterprise-template

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  BUILD.bazel  MODULE.bazel  README.md  TODO.md  docker-compose.yml  gazelle_python.yaml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.in  requirements_lock.txt
.github/actions/setup/: action.yml
.github/workflows/: autofix.yml  ci.yml
apps/backend/: BUILD.bazel  Dockerfile  export_openapi.py  main.py  package.json  pyproject.toml
apps/backend/src/: BUILD.bazel  core.py  sentry.py
apps/backend/tests/: BUILD.bazel  test_main.py
apps/frontend/: BUILD.bazel  package.json  pyproject.toml  vite.config.ts
apps/frontend/src/: App.tsx  main.tsx  placeholder.spec.ts
apps/frontend/src/hooks/: useNetworkingParams.ts
apps/frontend/src/services/: people.ts
apps/frontend/src/services/schemas/: .gitignore  people.d.ts
apps/frontend/src/utils/testing-utils/: people-mocks.ts  render-container.tsx  server.ts  setup.ts
apps/frontend/src/views/people/: people.logic.ts  people.spec.tsx  people.ui.tsx  people.view.tsx
patches/: httptools-fix-cc.patch  httptools-relax-setuptools.patch  rules_js_debug_yq.patch
tools/: BUILD.bazel  deploy_mypyc.py  mypyc.bzl  mypyc_compile.py  update_gazelle_resolves.py  update_module_overrides.py
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl
