load("@aspect_rules_py//uv/unstable:defs.bzl", "gazelle_python_manifest")
load("@aspect_rules_py//py:defs.bzl", "py_library")
load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

# Empty target for the root workspace package override
py_library(
    name = "root",
    visibility = ["//visibility:public"],
)

# gazelle:map_kind py_library py_library @aspect_rules_py//py:defs.bzl
# gazelle:map_kind py_binary py_binary @aspect_rules_py//py:defs.bzl
# gazelle:map_kind py_test py_test @aspect_rules_py//py:defs.bzl

# BEGIN gazelle:resolve local packages
# gazelle:resolve py shared //packages/shared/src/shared
# gazelle:resolve py shared.hello //packages/shared/src/shared
# END gazelle:resolve local packages

gazelle_python_manifest(
    name = "gazelle_python_manifest",
    hub = "pypi",
    venvs = ["dev"],
)

gazelle_binary(
    name = "gazelle_binary",
    languages = [
        "@rules_python_gazelle_plugin//python",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_binary",
)
