module(
    name = "modern-python-enterprise-template",
    version = "0.0.1",
)

bazel_dep(name = "aspect_rules_py", version = "1.11.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.9.0")

# Python interpreter provisioning from python-build-standalone
interpreters = use_extension("@aspect_rules_py//py/unstable:extension.bzl", "python_interpreters")
interpreters.toolchain(
    python_version = "3.14",
    is_default = True,
)
use_repo(interpreters, "python_interpreters")

# Prefer freethreaded+pgo+lto over freethreaded+debug.
# register_toolchains(":all") uses alphabetical order, and "debug" < "pgo_lto",
# so we must register the optimized variants first to give them priority.
register_toolchains(
    "@python_interpreters//:python_3_14_aarch64_apple_darwin_freethreaded_pgo_lto",
    "@python_interpreters//:python_3_14_aarch64_apple_darwin_freethreaded_pgo_lto_exec_tools",
    "@python_interpreters//:python_3_14_aarch64_unknown_linux_gnu_freethreaded_pgo_lto",
    "@python_interpreters//:python_3_14_aarch64_unknown_linux_gnu_freethreaded_pgo_lto_exec_tools",
    "@python_interpreters//:python_3_14_x86_64_apple_darwin_freethreaded_pgo_lto",
    "@python_interpreters//:python_3_14_x86_64_apple_darwin_freethreaded_pgo_lto_exec_tools",
    "@python_interpreters//:python_3_14_x86_64_unknown_linux_gnu_freethreaded_pgo_lto",
    "@python_interpreters//:python_3_14_x86_64_unknown_linux_gnu_freethreaded_pgo_lto_exec_tools",
)
register_toolchains("@python_interpreters//:all")

# Native build toolchain for sdist packages
tools = use_extension("@aspect_rules_py//py:extensions.bzl", "py_tools")
tools.rules_py_tools()
use_repo(tools, "rules_py_tools")

register_toolchains("@rules_py_tools//:all")

# Dependency resolution via uv (reads uv.lock directly)
uv = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv")
uv.declare_hub(hub_name = "pypi")
uv.project(
    hub_name = "pypi",
    lock = "//:uv.lock",
    pyproject = "//:pyproject.toml",
    default_build_dependencies = ["setuptools", "build"],
)
uv.override_package(
    name = "shared",
    lock = "//:uv.lock",
    target = "//packages/shared/src/shared",
)
uv.override_package(
    name = "backend",
    lock = "//:uv.lock",
    target = "//apps/backend",
)
uv.override_package(
    name = "modern-python-enterprise-template",
    lock = "//:uv.lock",
    target = "//:root",
)
uv.override_package(
    name = "httptools",
    lock = "//:uv.lock",
    pre_build_patches = [
        "//patches:httptools-relax-setuptools.patch",
        "//patches:httptools-fix-cc.patch",
    ],
    pre_build_patch_strip = 0,
)
use_repo(uv, "pypi")
