[project]
name = "modern-python-enterprise-template"
version = "0.0.1"
description = "A modern Python template for enterprise applications."
readme = "README.md"
requires-python = ">=3.14"

[tool.uv.workspace]
members = [
    "apps/*",
    "packages/*",
]

[dependency-groups]
dev = [
    "poethepoet>=0.44.0"
]

[tool.poe.tasks]
gen-reqs = "uv export --no-group dev --group test --no-emit-project --no-emit-workspace --package backend -o requirements_lock.txt"
build = "bazel build"
test = "bazel test"