[project]
name = "modern-python-enterprise-template"
version = "0.0.1"
description = "A modern Python template for enterprise applications."
readme = "README.md"
requires-python = ">=3.14"

[tool.uv.workspace]
members = [
    "apps/*",
    "packages/*",
]

[dependency-groups]
dev = [
    "poethepoet>=0.44.0" 
]

[tool.poe.tasks]
gen-reqs = "uv export --no-group dev --group test --group build --no-emit-project --no-emit-workspace --package backend --quiet -o requirements_lock.txt"
gazelle-resolve = "uv run python tools/update_gazelle_resolves.py"
gazelle-manifest = "bazel run //:gazelle_python_manifest.update"
gazelle = "bazel run //:gazelle"
build = "bazel build //..."
test = "bazel test //..."

[tool.poe.tasks.sync]
help = "Sync Bazel BUILD files after adding deps or packages"
sequence = ["gen-reqs", "gazelle-resolve", "gazelle-manifest", "gazelle"]