[project]
name = "modern-python-enterprise-template"
version = "0.0.1"
description = "A modern Python template for enterprise applications."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "apps/*",
    "packages/*",
]

[tool.uv.sources]
backend = { workspace = true }
shared = { workspace = true }

[dependency-groups]
dev = [
    "backend",
    "shared",
    "build>=1.2.2",
    "mypy[mypyc]>=1.19.1",
    "setuptools>=82.0.1",
    "pytest>=9.0.3",
    "poethepoet>=0.44.0",
]

[tool.poe.tasks]
_gazelle-manifest = "bazel run //:gazelle_python_manifest.update"
_gazelle = "bazel run //:gazelle"
build = "bazel build //..."
test = "bazel test //..."

[tool.poe.tasks.sync]
help = "Sync Bazel BUILD files after adding deps or packages"
sequence = ["_gazelle-manifest", "_gazelle"]