load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "update_gazelle_resolves",
    srcs = ["update_gazelle_resolves.py"],
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "tools",
    srcs = [
        "update_gazelle_resolves.py",
    ],
    visibility = ["//:__subpackages__"],
)

exports_files(
    ["mypyc_compile.py"],
    visibility = ["//:__subpackages__"],
)
