load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "update_gazelle_resolves",
    srcs = ["update_gazelle_resolves.py"],
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "tools",
    srcs = [
        "deploy_mypyc.py",
        "mypyc_compile.py",
        "update_gazelle_resolves.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pypi//mypy",
        "@pypi//setuptools",
    ],
)

exports_files(
    ["mypyc_compile.py"],
    visibility = ["//:__subpackages__"],
)

py_binary(
    name = "deploy_mypyc",
    srcs = ["deploy_mypyc.py"],
    visibility = ["//:__subpackages__"],
)

py_binary(
    name = "mypyc_compile",
    srcs = ["mypyc_compile.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pypi//mypy",
        "@pypi//setuptools",
    ],
)

# Playwright Chromium browser — platform-selecting aliases
alias(
    name = "chromium",
    actual = select({
        "@bazel_tools//src/conditions:darwin_arm64": "@chromium-darwin-arm64//:chromium",
        "@bazel_tools//src/conditions:darwin_x86_64": "@chromium-darwin-x86_64//:chromium",
        "@bazel_tools//src/conditions:linux_x86_64": "@chromium-linux-x86_64//:chromium",
        "@bazel_tools//src/conditions:windows_x64": "@chromium-windows-x86_64//:chromium",
        "//conditions:default": "@chromium-linux-x86_64//:chromium",
    }),
    visibility = ["//visibility:public"],
)

alias(
    name = "chromium_root",
    actual = select({
        "@bazel_tools//src/conditions:darwin_arm64": "@chromium-darwin-arm64//:.pw_root",
        "@bazel_tools//src/conditions:darwin_x86_64": "@chromium-darwin-x86_64//:.pw_root",
        "@bazel_tools//src/conditions:linux_x86_64": "@chromium-linux-x86_64//:.pw_root",
        "@bazel_tools//src/conditions:windows_x64": "@chromium-windows-x86_64//:.pw_root",
        "//conditions:default": "@chromium-linux-x86_64//:.pw_root",
    }),
    visibility = ["//visibility:public"],
)
