load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")

py_library(
    name = "backend_lib",
    srcs = ["main.py"],
    visibility = ["//apps/backend:__subpackages__"],
    deps = [
        "//packages/shared/src/shared",
        "@pypi//fastapi",
    ],
)

py_binary(
    name = "backend",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        "//packages/shared/src/shared",
        "@pypi//fastapi",
    ],
)
