load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")

py_library(
    name = "backend",
    srcs = ["main.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//packages/shared/src/shared",
        "@pypi//fastapi",
    ],
)

py_binary(
    name = "export_openapi",
    srcs = ["export_openapi.py"],
    imports = ["."],
    deps = [":backend"],
)

genrule(
    name = "openapi_spec",
    outs = ["openapi_spec.json"],
    cmd = "$(location :export_openapi) -o $@",
    tools = [":export_openapi"],
    visibility = ["//visibility:public"],
)
