[project]
name = "backend"
version = "0.0.1"
description = "A backend service for the modern Python enterprise template."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "shared"
]

[dependency-groups]
test = [
    "pytest>=9.0.3",
]
build = [
    "mypy[mypyc]>=1.19.1",
]
dev = [
    { include-group = "test" },
    { include-group = "build" },
    "ruff>=0.15.10",
    "poethepoet>=0.44.0"
]


[tool.uv.sources]
shared = { workspace = true }

[tool.poe.tasks]
_dev = {cmd = "uv run fastapi dev --reload-dir . --reload-dir ../../packages", env = {PYTHON_GIL = "0"}}
_build-mypyc = "bazel build //..."
_deploy-mypyc = "uv run python ../../tools/deploy_mypyc.py"
_clean-mypyc = "uv run python ../../tools/deploy_mypyc.py --clean"
_fastapi-run = {cmd = "uv run fastapi run", env = {PYTHON_GIL = "0"}}
lint = "uv run ruff check ."
typecheck = "uv run mypy ."
test = "uv run pytest tests"
format = "uv run ruff format ."

[tool.poe.tasks.start]
help = "Build mypyc extensions and start FastAPI in production mode"
sequence = ["_build-mypyc", "_deploy-mypyc", "_fastapi-run"]

[tool.poe.tasks.dev]
help = "Start FastAPI in development mode with auto-reload"
sequence = ["_clean-mypyc", "_dev"]