load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//apps/frontend:vite/package_json.bzl", vite_bin = "bin")
load("@npm//apps/frontend:vitest/package_json.bzl", vitest_bin = "bin")

# Link npm packages for this workspace member
npm_link_all_packages(name = "node_modules")

# Source and asset files
SRC_FILES = glob(
    [
        "src/**",
        "public/**",
    ],
    allow_empty = True,
)

# Root config files needed for building
CONFIG_FILES = glob([
    "*.html",
    "*.json",
    "*.ts",
])

SRCS = SRC_FILES + CONFIG_FILES

vite_bin.vite(
    name = "build",
    srcs = SRCS + [":node_modules"],
    args = ["build"],
    chdir = package_name(),
    out_dirs = ["dist"],
    visibility = ["//visibility:public"],
)

vitest_bin.vitest_test(
    name = "test",
    args = [
        "run",
        "--config=vite.config.ts",
    ],
    chdir = package_name(),
    data = SRCS + [":node_modules"],
)

js_library(
    name = "eslintrc",
    srcs = ["eslint.config.js"],
    visibility = ["//visibility:public"],
    deps = [":node_modules"],
)
